src/components/List/_list.scss
:root {
  --x-dist: 0;
  --x-height: 0;
}
$easing: cubic-bezier(0.51, 0.92, 0.24, 1.15);

.message-list {
  align-items: center;
  display: flex;
  flex-direction: column;
  height: 100%;
  list-style-type: none;
  margin: 0 auto;
  max-width: 645px;
  padding: 7rem 0 0;
  position: relative;
  width: 90vw;

  &__item > div {
    width: 85vw;
  }

  &__item,
  &__skeleton {
    height: 100%;
    margin-bottom: 0.75rem;
    max-height: calc(#{var(--height)} * 1px + 10px);
    position: relative;
    touch-action: none;
    transform: translateX(calc(#{var(--x-dist)} * 1px));
    transition: transform 0.5s $easing, max-height 0.5s $easing, opacity 0.25s;

    div {
      cursor: move;

      span,
      p {
        cursor: text;
        color: #000;
      }
    }

    &.swipe--active {
      opacity: 0.6;
      transition: transform 0s, opacity 0.25s;
    }

    &.swipe--out {
      max-height: 0;
      margin: 0;
      opacity: 0;
      overflow: hidden;
      transform: translateX(110vw);
      transition: transform 0.5s $easing, max-height 0.5s $easing,
        margin 0.5s $easing, opacity 0.5s;
    }
  }

  html[dir='rtl'] &__avatar {
    margin-right: unset;
    margin-left: 16px;
  }

  .MuiCardHeader-content {
    display: flex;
    flex: 0 1 auto;
    flex-direction: column;

    span {
      display: inline-block;
    }
  }
}

